@@ -96,6 +96,7 @@ PRIMITIVES = { 'boolean': 'Z',
 
 RESERVED = set(['delete', 'and', 'or', 'not', 'xor', 'union', 'register',
                 'const', 'bool', 'operator', 'typeof', 'asm', 'mutable',
+                'inline', 'typedef', 'struct',
                 'NULL', 'DOMAIN', 'IGNORE'])
 
 RENAME_METHOD_SUFFIX = '_'
