@@ -1,6 +1,7 @@
 Version 2.14 ->
 --------------------
  - improved JCC build on Linux by mokey patching setuptools (Caleb Burns)
+ - fixed bug with wrapping arrays coming out of generic iterators
  - 
 
 Version 2.13 -> 2.14
